Changed how interests tags etc work, now esco adaptable